name:                ElmLang
version:             0.1.0.0
synopsis:            elm-lang.org web site
description:         Server and content for the Elm Language web site.
homepage:            http://elm-lang.org/
license:             BSD3
license-file:        LICENSE
author:              Evan Czaplicki
maintainer:          info@elm-lang.org
copyright:           (c) 2012-2013 Evan Czaplicki

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

extra-tmp-files:       public/build
                     , public/cache

executable ElmServer
  main-is:             Server.hs
  other-extensions:    OverloadedStrings
  ghc-options:         -threaded -O2
  build-depends:       base >=4.6 && <4.7
                     , containers >=0.5 && <0.6
                     , bytestring >=0.10 && <0.11
                     , aeson >=0.6 && <0.7
                     , filepath >=1.3 && <1.4
                     , directory >=1.2 && <1.3
                     , parsec >=3.1 && <3.2
                     , blaze-html >=0.6 && <0.7
                     , HTTP >=4000.2 && <4000.3
                     , blaze-markup >=0.5 && <0.6
                     , Elm >=0.9 && <0.10
                     , happstack-server >=7.3 && <7.4
                     , mtl >=2.1 && <2.2
                     , process >=1.1 && <1.2

  hs-source-dirs:      server
  default-language:    Haskell2010