name: elm-website
version: 0.1.0.2

synopsis:
  elm-lang.org web site
description:
  Server and content for the Elm Language web site.

homepage: http://elm-lang.org/

license:      BSD3
license-file: LICENSE

author:     Evan Czaplicki
maintainer: info@elm-lang.org
copyright:  (c) 2012-2014 Evan Czaplicki

build-type: Simple

cabal-version:       >=1.10

executable run-elm-website
  hs-source-dirs:
    src/backend

  main-is:
    Main.hs

  ghc-options:
    -W -threaded -O2 -rtsopts "-with-rtsopts=-N -I4"

  build-depends:
    aeson,
    base,
    binary,
    blaze-html,
    blaze-markup,
    bytestring,
    containers,
    cmdargs,
    directory,
    elm-compiler >= 0.15 && < 0.16,
    elm-package,
    filepath,
    mtl >= 2.2.1 && < 3,
    snap-core,
    snap-server,
    text,
    utf8-string
